Add 3 rows of new paintings to animals.html

--- a/animals.html
+++ b/animals.html
@@ -44,6 +44,83 @@
         </nav>
     </header>
 
+        <!-- Minus -3rd row of animal paintings PROGULKA MANGO SKACHKA-->
+
+    <section class="clear">
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/121progulka.jpg" alt="A girl walks with a dog"><br>
+                The Walk by the Sea
+                <p> A copy of Olga Khilchenko's painting.
+                    Oil paint on canvas, size 30x40cm. 2024.</p>
+
+            </div>
+
+            <div class="album">
+                <img src="assets/images/116mango.jpg" alt="Mango the French bulldog"><br>
+                Meet Mango, the French bulldog
+                <p>Oil paint on canvas, size 50x61cm. 2024.</p>
+
+            </div>
+            <div class="album">
+                <img src="assets/images/119skachka.jpg" alt="A horse ride at night"><br>
+                The Moonlit Gallop
+                <p>Oil paint on canvas, size 25x30cm. 2024.</p>
+
+            </div>
+        </div>
+    </section>
+
+        <!--  Minus 2nd row of animal paintings HUNTER ZEROGRAVITY INTHEGARDEN-->
+
+    <section class="clear">
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/111hunter.jpg" alt="A cat's glance through the fence"><br>
+                The Hunter
+                <p>Oil paint on canvas, size 20x25cm. 2023.</p>
+
+            </div>
+
+            <div class="album">
+                <img src="assets/images/124zero.jpg" alt="A kitten jumps on the toy"><br>
+                Zero gravity
+                <p>Oil paint on canvas, size 40x60cm. 2023.</p>
+
+            </div>
+            <div class="album">
+                <img src="assets/images/125vsadu.jpg" alt="A red cat sitting on the garden post "><br>
+                In the garden
+                <p>Oil paint on canvas, size 20x25cm. 2023.</p>
+
+            </div>
+        </div>
+    </section>
+
+    <!--Minus-1st row of animal paintings SWAN, ROBIN, CORMORANT -->
+
+    <section class="container">
+
+        <div class="album">
+            <img src="assets/images/112swan.jpg" alt="A white swan"><br>
+            The White Swan
+            <p>Oil paint on canvas, size 20x20cm. 2024</p>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/115robin.jpg" alt="The Robin, a bird"><br>
+            The Robin
+            <p>Oil paint on canvas, size 20x20cm. 2024.</p>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/126cormorant.jpg" alt="The Cormorant drying its wings"><br>
+            The Cormorant drying its wings
+            <p>Oil paint on canvas, size 20x20cm. 2024.</p>
+        </div>
+
+    </section><br>
+
     
     <!--  0th row of animal paintings -->
 
@@ -130,9 +207,9 @@
         </div>
 
         <div class="album">
-            <img src="assets/images/ryzhik.jpg" alt="The Red green-eyed cat, very nice"><br>
+            <img src="assets/images/113ryzhyk.jpg" alt="The Red green-eyed cat, very nice"><br>
             The Red Cat
-            <p>Oil paint on canvas, size 20x20cm. 2022.</p>
+            <p>Oil paint on canvas, size 20x20cm. 2023.</p>
         </div>
 
         <div class="album">
