Correct a typo in animals.html

--- a/animals.html
+++ b/animals.html
@@ -49,7 +49,7 @@
        <section class="container">
         <div class="album">
             <img src="assets/images/122puffin.jpg" alt="A puffin"><br>
-            The White Swan
+            The Puffin
             <p>Oil paint on canvas, size 20x20cm. 2024</p>
         </div>
 
