Update 2nd row of landscapes.html

--- a/landscapes.html
+++ b/landscapes.html
@@ -76,8 +76,6 @@
     <!-- Second row of landscape paintings -->
 
     <section>
-        <p class="text-center">Three copies were painted by the friend's request and all three look a little different.
-            Paintings were done by Olga Bazanova's masterclass in YouTube. </p>
 
         <div class="container">
             <div class="album">
@@ -88,16 +86,16 @@
             </div>
 
             <div class="album">
-                <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy"><br>
-                 Saint-Jean-Cap-Ferrat-2 
-                <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+                <img src="assets/images/206nostalgia.jpg" alt="Painting of a Ukrainian village breakfast."><br>
+                Nostalgia
+                <p>Oil on canvas, 25x30cm. 2023.</p>
                  
             </div>
 
             <div class="album">
-                <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy"><br>
-                 Saint-Jean-Cap-Ferrat-3 
-                <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+                <img src="assets/images/210mizenhead.jpg" alt="Painting of Mizenhead."><br>
+                Mizenhead 
+                <p>Oil on canvas, 25.5x35.5cm. 2024.</p>
                  
             </div>
         </div>
