Update 7th row of landscapes.html

--- a/landscapes.html
+++ b/landscapes.html
@@ -250,7 +250,7 @@
             </div>
 
             <div class="album">
-                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a scopy)"><br>
+                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)"><br>
                  The little house in the forest  
                 <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
                     masterclass.</p>
@@ -258,10 +258,10 @@
             </div>
 
             <div class="album">
-                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade (a copy)"><br>
-                The little house in the forest  
-                <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
-                    masterclass.</p>
+                <img src=" assets/images/204silentnight.jpg" alt="A silent night by Thomas Kinkade (a copy)"><br>
+                A silent night 
+                <p>Oil paint, canvas on cardboard, size 25x30cm. 2021.Copy of Thomas Kinkade's picture.  
+                      </p>
                  
             </div>
         </div>
