--- a/landscapes.html
+++ b/landscapes.html
@@ -374,6 +374,31 @@
             </div>
         </div>
     </section><br>
+
+
+     <!--  12th row of landscape paintings -->
+
+    <section class="clear">
+        <div class="container">
+            <div class="album clear">
+                <img src="assets/images/203wave.jpg" alt="Picture of the Fastnet Lighthouse and The Wave"><br>
+                  The Fastnet and The Wave
+                <p>Oil on canvas, size 60x60cm. 2024.</p> 
+            </div>
+
+            <div class="album">
+                <img src="assets/images/202lilac-sunrise.jpg" alt="Painting of the lilac sunrise in the sea"><br>
+                The lilac dawn
+                <p>Oil on canvas, size 30x40cm. A copy of Jules Thomas' painting. 2023.</p>   
+            </div>
+            
+            <div class="album">
+                <img src="assets/images/200ballydehob.jpg" alt="Painting of Ballydehob Road Bridge"><br>
+                Ballydehob. The Road Bridge
+                <p>Oil on canvas, size 20x25cm. 2024.</p>     
+            </div>
+        </div>
+    </section><br>
     
     <div class="text-center">
         <p>That is all so far. 😉 </p><br>
