--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
                 in technique Radiance by Alexandr Maranov - The Crocus"></iframe>
             </div>
 
-            <a href="https://youtu.be/obibsVklNVA" target="_blank" rel="noopener"
-                aria-label="YouTube video on Painting by Alexandr Maranov - The Crocus (opens in new tab)">Masterclass
-                in technique Radiance by Alexandr Maranov - The Crocus </a>
+            <a href="https://youtu.be/SO5Q4ByvdWE?is=w3wIlJzHr21yKotM" target="_blank" rel="noopener"
+                aria-label="YouTube video on Painting by Muraljoe - How To Paint Waves - Ripples (opens in new tab)">Masterclass
+              How To Paint Waves - Ripples </a>
         </div>
 
     </div>
