Update MK at index.html

--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
 
         <div class="album">
             <div class="iframe-container">
-                <iframe width="450" height="253" src="https://www.youtube.com/embed/obibsVklNVA" title="Masterclass
-                in technique Radiance by Alexandr Maranov - The Crocus"></iframe>
+                <iframe width="450" height="253" src="https://youtu.be/SO5Q4ByvdWE?is=w3wIlJzHr21yKotM" title="Masterclass
+               How To Paint Waves - Ripples"></iframe>
             </div>
 
             <a href="https://youtu.be/SO5Q4ByvdWE?is=w3wIlJzHr21yKotM" target="_blank" rel="noopener"
@@ -219,7 +219,7 @@
 
     <footer class="clear contacts" id="footer">
         <div class="text-center">
-            Copyright &copy; Juniva 1981-2022.<br>
+            Copyright &copy; Juniva 1981-2025 <br>
             Contact us : <br>
            Phone: +353 83 085 0655  |  Email: juniva@juniva.net <br>
             <a href="https://facebook.com/" target="_blank" rel="noopener"
