--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         <div class="album">
             <div class="iframe-container">
-                <iframe width="450" height="253" src="https://youtube.com/embed/SO5Q4ByvdWE?is=w3wIlJzHr21yKotM" title="Masterclass
+                <iframe width="450" height="253" src="https://www.youtube.com/embed/SO5Q4ByvdWE?is=w3wIlJzHr21yKotM" title="Masterclass
                How To Paint Waves - Ripples"></iframe>
             </div>
 
