--- a/animals.html
+++ b/animals.html
@@ -44,6 +44,28 @@
         </nav>
     </header>
 
+
+   <!-- Minus -9th row of animal paintings BUDDA BEARDOG SWANMAGGIE-->
+       <section class="container">
+        <div class="album">
+            <img src="assets/images/230buddacat.jpg" alt="A buddha cat"><br>
+            The Buddha Cat
+            <p>Oil paint on canvas, size 60x60cm. 2025</p>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/231bear.jpg" alt="The dog"><br>
+            Bear the Dog
+            <p>Oil paint on canvas, size 40x50cm. 2025.</p>
+        </div>
+
+        <div class="album">
+            <img src="assets/images/232swan.jpg" alt="The Swan"><br>
+            The Swan
+            <p>Oil paint on canvas, size 30x30cm. 2024.</p>
+        </div>
+
+    </section><br>
     
         <!-- Minus -4th row of animal paintings PUFFIN SHAG CURLEW-->
        <section class="container">
