--- a/animals.html
+++ b/animals.html
@@ -66,6 +66,32 @@
         </div>
 
     </section><br>
+
+  <!-- Minus -8th row of animal paintings CHARLIE THOMAS REDCATTOM-->
+
+    <section class="clear">
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/233charlie.jpg" alt="A Pomeranian dog Charlie"><br>
+                Charlie the Dog
+                <p> Oil paint on canvas, size 40x50cm. 2024.</p>
+
+            </div>
+
+            <div class="album">
+                <img src="assets/images/234thomas.jpg" alt="A Beautiful cat Thomas"><br>
+                Thomas the Cat
+                <p>Oil paint on canvas, size 40x50cm. 2025.</p>
+
+            </div>
+            <div class="album">
+                <img src="assets/images/235tom.jpg" alt="A red cat lying on the armchair"><br>
+                Tom the Cat
+                <p>Oil paint on canvas, size 40x50cm. 2023.</p>
+
+            </div>
+        </div>
+    </section>
     
         <!-- Minus -4th row of animal paintings PUFFIN SHAG CURLEW-->
        <section class="container">
