--- a/animals.html
+++ b/animals.html
@@ -119,20 +119,19 @@
 
    <!-- Minus -6th row of animal paintings CASPER LEOPARD HORSE-->
        <section class="container">
-        <div class="album">
-            <img src="assets/images/239casper.jpg" alt="An italian cat-gentleman in the armchair"><br>
-           Meet Casper, un Signore Italiano
-            <p>Oil paint on canvas, size 40x50cm. 2024.</p>
-        </div>
 
         <div class="album">
             <img src="assets/images/240leopard.jpg" alt="The leopard in the jungle"><br>
             The Leopard
             <p>Oil paint on canvas, size 50x70cm. 2024.</p>
         </div>
-
         <div class="album">
-            <img src="assets/images/241horse.jpg" alt="The Horse reflecting in the water"><br>
+            <img src="assets/images/239casper.jpg" alt="An italian cat-gentleman in the armchair"><br>
+           Meet Casper, un Signore Italiano
+            <p>Oil paint on canvas, size 40x50cm. 2024.</p>
+        </div>
+        <div class="album">
+            <img src="assets/images/241horse.JPG" alt="The Horse reflecting in the water"><br>
             The Horse
             <p>Oil paint on canvas, size 50x70cm. 2025.</p>
         </div>
@@ -157,7 +156,7 @@
         <div class="album">
             <img src="assets/images/244susanna.jpg" alt="The white cat on the cloud"><br>
             Sugar the Cat
-            <p>Oil paint on canvas, size 30x30cm. 2024.</p>
+            <p>Oil paint on canvas, size 40x50cm. 2024.</p>
         </div>
 
     </section><br>
